# neuronet-ai-cognitiveshell-web-cli

./: .gitignore  .replit  AI_shell_final_v4.5.py  README.md  pyproject.toml  quickstart.py  replit.nix  requirements.txt  setup.py
.github/workflows/: python-publish.yml
ai_web_dashboard/backend/: ai_core.py  config.py  env_utils.py  main.py  requirements.txt
ai_web_dashboard/backend/utils/: ai_services.py  file_utils.py  llm_utils.py  shell_utils.py  telegram_utils.py  web_utils.py
ai_web_dashboard/frontend/: package-lock.json  package.json
ai_web_dashboard/frontend/src/: App.css  App.js  theme.js
ai_web_dashboard/frontend/src/components/: AIAnalytics.css  AIAnalytics.js  AutoDebugPopup.css  AutoDebugPopup.js  Chat.js  ChatHistory.css  ChatHistory.js  CollapsibleOutput.css  CollapsibleOutput.js  CollapsibleSection.js  Dashboard.js  ErrorBoundary.js  ExecutionApprovalPopup.js  FileManager.css  FileManager.js  ModelThoughtProcess.css  ModelThoughtProcess.js  RenderedMessage.js  Settings.js  Sidebar.js  SystemInfo.css  SystemInfo.js  Terminal.css  Terminal.js
cognitiveshell/: __init__.py  cognitiveshell.py
generated_files/: chat_history.json  settings.json  shell_history.json  token_usage.json
